--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,28 +1,43 @@
-body {
-  font-family: Arial, sans-serif;
+body{
+  background-color: rgb(0, 0, 0);
+}
+
+header{
+  background-color: rgb(0, 0, 0);
+  border-bottom: white solid 1px;
+  padding: 10px;
+  text-align: center;
+  color: white;
+  font-size: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+}
+
+header nav ul{
+  list-style-type: none;
   margin: 0;
   padding: 0;
-  line-height: 1.6;
+  display: flex;
+  justify-content: center;
 }
 
-header {
-  background: #333;
-  color: #fff;
-  padding: 10px;
-}
-
-header nav a {
-  color: #fff;
+header nav ul li{
   margin: 0 10px;
+}
+
+header nav ul li a{
+  color: white;
   text-decoration: none;
 }
 
-section {
-  padding: 20px;
-}
-
-.proyecto {
-  border: 1px solid #ddd;
-  padding: 10px;
-  margin-bottom: 10px;
+header section i{
+  color: white;
+  font-size: 30px;
 }
