--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-body{
+/* body{
   background-color: rgb(0, 0, 0);
 }
 
@@ -40,4 +40,4 @@ header nav ul li a{
 header section i{
   color: white;
   font-size: 30px;
-}
+} */
